# libCstd

./: .gitignore  CMakeLists.txt  Makefile  README.md  caaa.rb  compile_commands.json
.github/workflows/: main.yaml
docs/: .gitignore  mkdocs.yml
docs/docs/: Buffer.md  index.md
src/: ca_tree.h
src/buffer/: ca_buffer.c  ca_buffer.cc  ca_buffer.h  ca_buffer.hh
src/data/: ca_bintree.c  ca_bintree.h  ca_vector.c  ca_vector.h
src/error/: ca_colors.h  ca_error.c  ca_error.h  ca_error_light.h
src/events/: events.h
src/io/: ca_io.c  ca_io.h
src/ringbuffer/: ca_ringbuffer.c  ca_ringbuffer.h
src/sockets/: ca_sockets.c  ca_sockets.h  soc.c  soc.h
src/testing/generics/: generic.c  generic.h  main.c
src/util/: ca_compare.c  ca_compare.h
tests/: buffer_tests.c  buffer_tests.cc  error_tests.c  ringbuffer_tests.c  tree_tests.c  vector_tests.c
